# pandoc

./: README.md  module.zp  pandoc.cabal  pandoc.zp
priv/: Pandoc.hi  Pandoc.hs  req.zp
